syntax = "proto3";

syntax = "proto3";

package rpc;

option go_package = "github.com/VaDKustiK/yandex-golang-course/calculator_service/pkg/orchestrator/rpc;rpc";

import "google/protobuf/empty.proto";

service Orchestrator {
  rpc GetTask (google.protobuf.Empty) returns (TaskMessage);
  rpc PostResult (TaskResult) returns (google.protobuf.Empty);
}

message TaskMessage {
  uint32 id            = 1;
  double arg1          = 2;
  double arg2          = 3;
  string operation     = 4;
  uint32 operation_time = 5;
}

message TaskResult {
  uint32 id     = 1;
  double result = 2;
}

service Orchestrator {
  rpc GetTask (google.protobuf.Empty) returns (TaskMessage);
  rpc PostResult (TaskResult) returns (google.protobuf.Empty);
}